--- a/GroceryApplication/test-output/emailable-report.html
+++ b/GroceryApplication/test-output/emailable-report.html
@@ -8,15 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">crossbrowser testing</th></tr>
-<tr><td><a href="#t0">chrometest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,156</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">edgetest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,820</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">10,976</th><th colspan="2"></th></tr>
+<tr><th colspan="8">my Test Suite</th></tr>
+<tr><td><a href="#t0">my Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7,998</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">crossbrowser testing</th></tr></tbody><tbody id="t0"><tr><th colspan="4">chrometest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testscripts.SubCategoryTest</td><td><a href="#m0">verifySearchSubcategory</a></td><td rowspan="1">1745573171677</td><td rowspan="1">2041</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">edgetest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testscripts.SubCategoryTest</td><td><a href="#m1">verifySearchSubcategory</a></td><td rowspan="1">1745573176945</td><td rowspan="1">1678</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">my Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">my Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testscripts.ManageContactTest</td><td><a href="#m0">verifyUserCanUpdateContactsOnManageContacts</a></td><td rowspan="1">1745599858554</td><td rowspan="1">4460</td></tr></tbody>
 </table>
-<h2>chrometest</h2><h3 id="m0">testscripts.SubCategoryTest#verifySearchSubcategory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>edgetest</h2><h3 id="m1">testscripts.SubCategoryTest#verifySearchSubcategory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>my Test</h2><h3 id="m0">testscripts.ManageContactTest#verifyUserCanUpdateContactsOnManageContacts</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
