--- a/GroceryApplication/test-output/index.html
+++ b/GroceryApplication/test-output/index.html
@@ -38,8 +38,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-crossbrowser_testing" class="navigator-link">
-              <span class="suite-name border-passed">crossbrowser testing</span>
+            <a href="#" panel-name="suite-my_Test_Suite" class="navigator-link">
+              <span class="suite-name border-passed">my Test Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,37 +49,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-crossbrowser_testing" class="navigator-link ">
-                    <span>C:\Users\USER\eclipse-workspace\GroceryApplication\crossbrowsertest.xml</span>
+                  <a href="#" panel-name="test-xml-my_Test_Suite" class="navigator-link ">
+                    <span>C:\Users\USER\git\groceryapp\GroceryApplication\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-crossbrowser_testing" class="navigator-link ">
-                    <span class="test-stats">2 tests</span>
+                  <a href="#" panel-name="testlist-my_Test_Suite" class="navigator-link ">
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-crossbrowser_testing" class="navigator-link ">
+                  <a href="#" panel-name="group-my_Test_Suite" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-crossbrowser_testing" class="navigator-link ">
+                  <a href="#" panel-name="times-my_Test_Suite" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-crossbrowser_testing" class="navigator-link ">
+                  <a href="#" panel-name="reporter-my_Test_Suite" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-crossbrowser_testing" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-my_Test_Suite" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-crossbrowser_testing" class="navigator-link ">
+                  <a href="#" panel-name="chronological-my_Test_Suite" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -92,26 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-crossbrowser_testing" class="hide-methods passed suite-crossbrowser_testing"> (hide)</a> <!-- hide-methods passed suite-crossbrowser_testing -->
-                      <a href="#" panel-name="suite-crossbrowser_testing" class="show-methods passed suite-crossbrowser_testing"> (show)</a> <!-- show-methods passed suite-crossbrowser_testing -->
+                      <a href="#" panel-name="suite-my_Test_Suite" class="hide-methods passed suite-my_Test_Suite"> (hide)</a> <!-- hide-methods passed suite-my_Test_Suite -->
+                      <a href="#" panel-name="suite-my_Test_Suite" class="show-methods passed suite-my_Test_Suite"> (show)</a> <!-- show-methods passed suite-my_Test_Suite -->
                     </span>
-                    <div class="method-list-content passed suite-crossbrowser_testing">
+                    <div class="method-list-content passed suite-my_Test_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-crossbrowser_testing" title="testscripts.SubCategoryTest" class="method navigator-link" hash-for-method="verifySearchSubcategory">verifySearchSubcategory</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-my_Test_Suite" title="testscripts.ManageContactTest" class="method navigator-link" hash-for-method="verifyUserCanUpdateContactsOnManageContacts">verifyUserCanUpdateContactsOnManageContacts</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-crossbrowser_testing" title="testscripts.SubCategoryTest" class="method navigator-link" hash-for-method="verifySearchSubcategory">verifySearchSubcategory</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-crossbrowser_testing -->
+                    </div> <!-- method-list-content passed suite-my_Test_Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -122,179 +117,126 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-crossbrowser_testing" class="panel crossbrowser_testing">
-          <div class="suite-crossbrowser_testing-class-passed">
+        <div panel-name="suite-my_Test_Suite" class="panel my_Test_Suite">
+          <div class="suite-my_Test_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testscripts.SubCategoryTest</span>
+              <span class="class-name">testscripts.ManageContactTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifySearchSubcategory">
-                  </a> <!-- verifySearchSubcategory -->
-                  <span class="method-name">verifySearchSubcategory</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifySearchSubcategory">
-                  </a> <!-- verifySearchSubcategory -->
-                  <span class="method-name">verifySearchSubcategory</span>
+                  <a name="verifyUserCanUpdateContactsOnManageContacts">
+                  </a> <!-- verifyUserCanUpdateContactsOnManageContacts -->
+                  <span class="method-name">verifyUserCanUpdateContactsOnManageContacts</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-crossbrowser_testing-class-passed -->
-        </div> <!-- panel crossbrowser_testing -->
-        <div panel-name="test-xml-crossbrowser_testing" class="panel">
+          </div> <!-- suite-my_Test_Suite-class-passed -->
+        </div> <!-- panel my_Test_Suite -->
+        <div panel-name="test-xml-my_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\USER\eclipse-workspace\GroceryApplication\crossbrowsertest.xml</span>
+            <span class="header-content">C:\Users\USER\git\groceryapp\GroceryApplication\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;crossbrowser testing&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;chrometest&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
+&lt;suite name=&quot;my Test Suite&quot;&gt;
+  &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;listeners.Listeners&quot;/&gt;
+    &lt;listener class-name=&quot;listeners.RetryListener&quot;/&gt;
+  &lt;/listeners&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;my Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testscripts.SubCategoryTest&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;verifySearchSubcategory&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- testscripts.SubCategoryTest --&gt;
+      &lt;class name=&quot;testscripts.ManageContactTest&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- chrometest --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;edgetest&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;edge&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;testscripts.SubCategoryTest&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;verifySearchSubcategory&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- testscripts.SubCategoryTest --&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- edgetest --&gt;
-&lt;/suite&gt; &lt;!-- crossbrowser testing --&gt;
+  &lt;/test&gt; &lt;!-- my Test --&gt;
+&lt;/suite&gt; &lt;!-- my Test Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-crossbrowser_testing" class="panel">
+        <div panel-name="testlist-my_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for crossbrowser testing</span>
+            <span class="header-content">Tests for my Test Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">chrometest (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">edgetest (1 class)</span>
+                <span class="test-name">my Test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-crossbrowser_testing" class="panel">
+        <div panel-name="group-my_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for crossbrowser testing</span>
+            <span class="header-content">Groups for my Test Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-crossbrowser_testing" class="panel">
+        <div panel-name="times-my_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for crossbrowser testing</span>
+            <span class="header-content">Times for my Test Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_crossbrowser_testing');
-function tableData_crossbrowser_testing() {
+suiteTableInitFunctions.push('tableData_my_Test_Suite');
+function tableData_my_Test_Suite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifySearchSubcategory')
-data.setCell(0, 2, 'testscripts.SubCategoryTest')
-data.setCell(0, 3, 2041);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifySearchSubcategory')
-data.setCell(1, 2, 'testscripts.SubCategoryTest')
-data.setCell(1, 3, 1678);
-window.suiteTableData['crossbrowser_testing']= { tableData: data, tableDiv: 'times-div-crossbrowser_testing'}
+data.setCell(0, 1, 'verifyUserCanUpdateContactsOnManageContacts')
+data.setCell(0, 2, 'testscripts.ManageContactTest')
+data.setCell(0, 3, 4460);
+window.suiteTableData['my_Test_Suite']= { tableData: data, tableDiv: 'times-div-my_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
-              <div id="times-div-crossbrowser_testing">
-              </div> <!-- times-div-crossbrowser_testing -->
+              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <div id="times-div-my_Test_Suite">
+              </div> <!-- times-div-my_Test_Suite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-crossbrowser_testing" class="panel">
+        <div panel-name="reporter-my_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for crossbrowser testing</span>
+            <span class="header-content">Reporter output for my Test Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-crossbrowser_testing" class="panel">
+        <div panel-name="ignored-methods-my_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">6 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">testscripts.SubCategoryTest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">VerifyDeleteSubCategory</span>
-                <br/>
-                <span class="ignored-method-name">VerifyEditSubcategoryWithNewData</span>
-                <br/>
-                <span class="ignored-method-name">VerifyDeleteSubCategory</span>
-                <br/>
-                <span class="ignored-method-name">VerifyEditSubcategoryWithNewData</span>
-                <br/>
-                <span class="ignored-method-name">verifyAddNewSubcategoryWithValidDetails</span>
-                <br/>
-                <span class="ignored-method-name">verifyAddNewSubcategoryWithValidDetails</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-crossbrowser_testing" class="panel">
+        <div panel-name="chronological-my_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testscripts.SubCategoryTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testscripts.ManageContactTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">initializeBrowserMethod(Chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifySearchSubcategory</span>
-                <span class="method-start">2765 ms</span>
+                <span class="method-name">verifyUserCanUpdateContactsOnManageContacts</span>
+                <span class="method-start">3223 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">driverQuit([TestResult name=verifySearchSubcategory status=SUCCESS method=SubCategoryTest.verifySearchSubcatego...)</span>
-                <span class="method-start">4812 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">initializeBrowserMethod(edge)</span>
-                <span class="method-start">5208 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifySearchSubcategory</span>
-                <span class="method-start">8033 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">driverQuit([TestResult name=verifySearchSubcategory status=SUCCESS method=SubCategoryTest.verifySearchSubcatego...)</span>
-                <span class="method-start">9714 ms</span>
+                <span class="method-name">driverQuit([TestResult name=verifyUserCanUpdateContactsOnManageContacts status=SUCCESS method=ManageContactTest...)</span>
+                <span class="method-start">7696 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
